set(MAIN_INCLUDE_DIR "${PROJECT_SOURCE_DIR}/include/")
set(MAIN_BINARY_NAME "coldicePost")

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY_BACK ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})
SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY "${PROJECT_SOURCE_DIR}/bin")

FILE(GLOB HSources *.h ../*.h)
FILE(GLOB HXXSources *.hxx ../*.hxx)

SET( MAIN_BINARY_SRC
  post.cpp 
  ${HXXSources}
  ${HSources}
  )

SET(MAIN_BINARY_NAME_DEPENDENCE "")
if (NDIMS MATCHES "2" OR NDIMS MATCHES "2+3")
  add_executable("${MAIN_BINARY_NAME}_2D${MAIN_BINARY_NAME_SUFFIX}" ${MAIN_BINARY_SRC})
  set_target_properties("${MAIN_BINARY_NAME}_2D${MAIN_BINARY_NAME_SUFFIX}" 
    PROPERTIES COMPILE_DEFINITIONS "D_DIMS_COUNT=2;${SOLVER_COMPILE_PROPERTIES}")
  SET(MAIN_BINARY_NAME_DEPENDENCE "${MAIN_BINARY_NAME}_2D${MAIN_BINARY_NAME_SUFFIX}")
endif()

if (NDIMS MATCHES "3" OR NDIMS MATCHES "2+3")
  add_executable("${MAIN_BINARY_NAME}_3D${MAIN_BINARY_NAME_SUFFIX}" ${MAIN_BINARY_SRC})
  set_target_properties("${MAIN_BINARY_NAME}_3D${MAIN_BINARY_NAME_SUFFIX}" 
    PROPERTIES COMPILE_DEFINITIONS "D_DIMS_COUNT=3;${SOLVER_COMPILE_PROPERTIES}")
  SET(MAIN_BINARY_NAME_DEPENDENCE "${MAIN_BINARY_NAME_DEPENDENCE}" "${MAIN_BINARY_NAME}_3D${MAIN_BINARY_NAME_SUFFIX}")
endif()

add_custom_target(${MAIN_BINARY_NAME} 
  DEPENDS "${MAIN_BINARY_NAME_DEPENDENCE}")
set(ALL_TARGETS ${MAIN_BINARY_NAME_DEPENDENCE})

install (TARGETS ${ALL_TARGETS} DESTINATION bin)

SET (CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_RUNTIME_OUTPUT_DIRECTORY})

SET(TARGETS_LIST_LOC ${TARGETS_LIST_LOC} ${ALL_TARGETS})

SET(TARGETS_LIST ${TARGETS_LIST} ${TARGETS_LIST_LOC} PARENT_SCOPE)
SET(NOT_BUILT_TARGETS_LIST ${NOT_BUILT_TARGETS_LIST} ${NOT_BUILT_TARGETS_LIST_LOC} PARENT_SCOPE)
SET(DISABLED_FEATURES_LIST ${DISABLED_FEATURES_LIST} ${DISABLED_FEATURES_LIST_LOC} PARENT_SCOPE)
